tests/syntax_error/generic_zero_params_use.jou
def foo() -> None:
    x: List[]  # Error: empty [] is not valid syntax when specifying a type
